--- a/Home Page/FAQ/index.html
+++ b/Home Page/FAQ/index.html
@@ -253,7 +253,7 @@
             </svg>
           </a>
 
-          <a href="https://www.instagram.com/cart.lanka/?fbclid=IwY2xjawMKSZxleHRuA2FlbQIxMABicmlkETB5V0N1QjNveTd1dGR6T0c2AR7lUbA4C41hRSXgf18AiPKpdcSvGXm5EKuzRQZrplJmboR1jbI5B0Suj8AShA_aem_TLuOxbw9YSJZxfpDpfEpTA#"
+          <a href="https://www.instagram.com/phanthom.global/"
             target="_blank" aria-label="Instagram">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram"
               viewBox="0 0 16 16">
