--- a/Home Page/FAQ/index.html
+++ b/Home Page/FAQ/index.html
@@ -253,8 +253,7 @@
             </svg>
           </a>
 
-          <a href="https://www.instagram.com/phanthom.global/"
-            target="_blank" aria-label="Instagram">
+          <a href="https://www.instagram.com/phanthom.global/" target="_blank" aria-label="Instagram">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram"
               viewBox="0 0 16 16">
               <path
