--- a/Home Page/Destinations/Packages/ex/UK5.html
+++ b/Home Page/Destinations/Packages/ex/UK5.html
@@ -65,7 +65,11 @@
       </div>
 
       <div class="cta-wrap">
-        <button class="btn primary" id="enquireBtn"><i class="ri-send-plane-2-line"></i> Enquire Now</button>
+        <a href="../applyForm/Applynow1.html">
+          <button class="btn primary" id="enquireBtn">
+            <i class="ri-send-plane-2-line"></i> Enquire Now
+          </button>
+        </a>
       </div>
 
       <aside class="sticky-card">
