--- a/Home Page/Destinations/Packages/ex/aussie3.html
+++ b/Home Page/Destinations/Packages/ex/aussie3.html
@@ -11,7 +11,6 @@
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="icon" href="../../../New folder/Favicon (2).png" type="image/png">
-
   <link rel="stylesheet" href="../styles.css" />
 </head>
 
@@ -64,8 +63,13 @@
       </div>
 
       <div class="cta-wrap">
-        <button class="btn primary" id="enquireBtn"><i class="ri-send-plane-2-line"></i> Enquire Now</button>
+        <a href="../applyForm/Applynow1.html">
+          <button class="btn primary" id="enquireBtn">
+            <i class="ri-send-plane-2-line"></i> Enquire Now
+          </button>
+        </a>
       </div>
+
 
       <aside class="sticky-card">
         <div class="price-row">
