--- a/Home Page/main.html
+++ b/Home Page/main.html
@@ -85,8 +85,11 @@
 
     <div class="content">
       <h1>CANADA<br /><span>|The Great White North</span></h1>
-      <P>Canada offers vast wilderness, vibrant cities, and friendly vibes — from stunning national parks and Niagara
-        Falls to multicultural hubs like Toronto and Vancouver. Perfect for nature lovers and urban explorers alike.</P>
+      <P>Canada offers stunning natural beauty, vibrant cities, and diverse cultural experiences. From majestic
+        mountains
+        and crystal lakes to modern urban life and friendly people, it's a perfect destination for adventure,
+        relaxation,
+        and unforgettable travel memories.</P>
       <a href="./Countries/AmadaCanada.html" class="read-more">Read More</a>
     </div>
 
